Note Minor Updates

--- a/2023ECE226Note/collection/chapter4.tex
+++ b/2023ECE226Note/collection/chapter4.tex
@@ -204,7 +204,7 @@ We have seen the continuous counterpart of Discrete Uniform, Geometric and Pasca
 \end{theorem}
 
 % \includegraphics[width=\textwidth, center]{normal_cdf.pdf}
-
+\iffalse
 \section{Delta Function, Mixed (Being Discrete and Continuous at the same time) Random Variables
 % (\textcolor{red}{Only for Engineering Students})
 }
@@ -271,3 +271,4 @@ We have seen the continuous counterpart of Discrete Uniform, Geometric and Pasca
 \begin{theorem}
     $X$ is a \textbf{mixed} random variable if and only if $f_X(x)$ contains both impulses and nonzero, finite values.
 \end{theorem}
+\fi
